# chat-messages-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5ab33476c828_initial_migration.py  6eab162f6459_change_created_at_to_float_timestamp.py
app/: main.py
app/api/: chats.py  health.py  messages.py  router.py
app/api/v1/: chats.py  messages.py  router.py
app/core/: config.py  database.py  logging.py
app/models/: chat.py  message.py
app/schemas/: chat.py  message.py
app/services/: chat_service.py  message_service.py
tests/: conftest.py
tests/api/: test_chats.py  test_messages.py
tests/integration/: test_cascade_delete.py  test_pagination.py
